---
config:
  theme: redux-dark
---
classDiagram
direction TB
    class Instruction {
		<<BaseModel>>
	    + command: str
	    + arguments: List[str]
    }
    class Dockerfile {
		<<BaseModel>>
	    + instructions: List[Instruction]
	    + parse_file(file_path: str)
    }
    class Image {
		<<BaseModel>>
	    + name: str
	    + id: UUID
	    + creation_date: datetime
	    + dependency_dir: str
		+ dockerfile: Dockerfile
    }
    class ImageManager {
	    - images: Dict[UUID, Image]
		- local_images_dir: str
		+ get_image(id: UUID) -> Image
	    + build_image(image_name: str, dockerfile_path: str, dependency_dir: str)
		+ save_images_to_files(dir: str)
	    + delete_image(id: UUID)
	    + load_image(image_path: str)
	    + load_local_images(dir: str)
	    + get_images() -> List[Image]
    }
    class Container {
	    - name: str
	    - image: Image
	    + id: UUID
	    + state: State
		- ram_limit: float
		- cpu_limit: float
	    + run()
	    + stop()
    }
    class State {
		<<enumeration>>
	    + CREATED
	    + RUNNING
	    + EXITED
		+ STOPPED
    }
    class ContainerManager {
	    - containers: Dict[UUID, Container]
	    + run_container(id: UUID)
	    + stop_container(id: UUID)
	    + delete_container(id: UUID)
	    + create_container(name: str, image: Image, cpu_limit: float, ram_limit: float)
	    + get_containers() -> List[Container]
    }
    class DockerManager {
	    - image_manager: ImageManager
	    - container_manager: ContainerManager
	    - get_input() -> List[str]
	    - interpret_command(input: List[str]) -> bool
	    + run()
    }
  
    ImageManager *-- Image
    Dockerfile *-- Instruction
    Container *-- State
    Dockerfile <-- ImageManager
	Image *-- Dockerfile
    Container *-- Image
    ContainerManager *-- Container
    DockerManager *-- ContainerManager
    DockerManager *-- ImageManager
